--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -33,11 +33,13 @@ int fputc(int c, FILE* stream);	//fputc 함수의 두 번째 매개변수 stream
 //파일의 끝에 도달하거나 함수호출 실패 시 EOF 반환
 int getchar(void);
 int fgetc(FILE* stream);
+
+int fputs("이름 입력 : ",stdout);//이름 입력을 출력
 ```
-#### 문자 단위 입출력 함수의 존재 이유
+* **문자 단위 입출력 함수의 존재 이유**<br/>
 **print**와 **scanf 함수**는 본래 서식지정을 통해서 **새로운 입출력의 형태를 구성하는 함수**이다.
-이렇듯 화려한 기능을 제공하는 함수는 그에 따른 대가가 요구되어 사용하는 **메모리 공간도 크고, 해야 할 연산의 양도 많아서 상대적으로 속도가 느리다**.
-뿐만 아니라 **별도의 서식지정을 해야 하니 문장을 구성하는 것도 번거로운 편**이다.
+이렇듯 화려한 기능을 제공하는 함수는 그에<br/>따른 대가가 요구되어 사용하는 **메모리 공간도 크고, 해야 할 연산의 양도 많아서 상대적으로 속도가 느리다**.
+뿐만 아니라 **별도의 서식지정을 해야 하니 문장을 구성하는 것도 번거로운 편**이다.<br/>
 따라서 단순히 문자 하나를 입출력 하는 것이 목적이라면 **문자 입력함수와 문자 출력함수**를 사용하면 된다.
 
 #### 3. 문자열 출력 함수(puts,fputs)
@@ -95,7 +97,7 @@ while (1)
 }
 ```
 
-#### 반환형이 int이고, int형 변수에 문자를 담는 이유
+* **반환형이 int이고, int형 변수에 문자를 담는 이유**<br/>
 getchar 함수와 fgetc 함수가 반환하는 값 중 하나인 **EOF는 -1로 정의된 상수**이다.<br/>
 따라서 반환형이 char형이라면, 그리고 char를 unsigned char로 처리하는 컴파일러에 의해서 컴파일이 되었다면,<br/>
 EOF는 반환의 과정에서 엉뚱한 양의 정수로 형 변환이 되어버리고 만다. 그래서 **어떠한 상황에서도 -1을 인식할 수 있는 int형으로 반환형을 정의**해 놓은 것이다.
@@ -120,6 +122,26 @@ ANSI C의 표준에서 정의된 함수(printf, scanf, fputc, fgetc 등등). 표
 * **데이터 버퍼링을 하는 이유** <br/>
 가장 큰 이유는 **'데이터 전송의 효율성'과 관련**이 있다.
 버퍼링 없이 키보드가 눌릴 때마다 눌린 문자의 정보를 목적지로 바로<br/> 이동시키는 것보다 **중간에 메모리 버퍼를 둬서 데이터를 한데 묵어서 이동시키는 것이 보다 효율적이고 빠르다**.
+
+* **입력버퍼와 출력버퍼를 비우는 fflush 함수**<br/>
+입력버퍼에 남아있는 불필요한 데이터를 버퍼를 떠나서 소멸시키거나, 출력버퍼에 저장된 데이터가 버퍼를 떠나서 목적지로 이동시키는 함수.
+
+```cpp
+#include <stdio.h>
+int fflush(FILE* stream);//함수호출 성공 시 0, 실패 시 EOF 반환
+
+fflush(stdout);		//표준 출력버퍼를 비움(저장된 데이터를 목적지로 이동)
+fflush(stdin);		//표준 입력버퍼를 비움(남아있는 데이터를 소멸)
+
+//\n을 만날 때까지 문자를 읽어 들이는 함수(입력 버퍼에 저장된 문자들을 지우는 함수)
+void ClearLineFromReadBuffer(void)
+{
+	while(getchar() != '\n');//프로그램 사용자가 잘못 입력을 해도 \n을 만나면 나머지를 지워버린다.
+}
+```
+
+
+
 
 
 
