--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -193,11 +193,34 @@ char* strncat(char* dest, const char* src, size_t n);
 char str1[30] = "First~";
 char str2[20] = "Second";
 
-strcat(str1,str2);		//str1의 문자열 뒤에 str2를 복사, "First~\n"에서 "First~Second\n"로 덧붙어진다.
+strcat(str1,str2);	//str1의 문자열 뒤에 str2를 복사, "First~\n"에서 "First~Second\n"로 덧붙어진다.
 strncat(str1,str2,8);	//str1의 문자열 뒤에 str2의 8개 문자까지만 복사, str2의 길이가 8을 넘어도 널 문자(\n)를 포함하여 총 9개의 문자가 덧붙여진다.
 ```
 
+#### 문자열을 비교하는 함수( strcmp, strncmp )
+* 해당되는 함수들은 **인자로 전달된 두 문자열의 내용을 비교하여 결과값를 반환**한다.
+* strncmp함수는 **세 번째 인자로 전달된 수의 크기만큼 문자를 비교한다**.
+* 문자열의 크고 작음은 **아스키 코드 값을 기준으로 결정**된다.
+```cpp
+#include <string.h>
 
+//두 문자열의 내용이 같으면 0, 같지 않으면 0이 아닌 값 반환
+//s1이 더 크면 0보다 큰 값 반환, s2가 더 크면 0보다 작은 값 반환, s1과 s2의 내용이 모두 같으면 0 반환
+int strcmp(const char* s1, const char* s2);
+int strncmp(const char* s1, const char* s2, size_t n);
+
+//strcmp함수는 참이면 0으로 출력하므로 if문 사용시 !strcmp로 사용(strcmp가 참이면 if는 거짓으로 나와야함).
+if(!strcmp(s1,s2));
+if(!strcmp(s1,s2,3));
+```
+
+#### 그 이외의 변환 함수들(헤더파일 <stdlib.h>에 선언된  함수들)
+* **문자열로 표현된 정수나 실수의 값을 정수나 실수의 데이터로 변환해준다.**
+```cpp
+int atoi(const char* str);	//문자열의 내용을 int형으로 변환
+long atol(const char* str);	//문자열의 내용을 long형으로 변환
+double atof(const char* str);	//문자열의 내용을 double형으로 변환
+```
 
 
 
