--- a/C/learn/구조체_2.md
+++ b/C/learn/구조체_2.md
@@ -91,6 +91,18 @@ int main()
   return 0;
 }
 ```
+#### 구조체를 정의하는 이유
+* 구조체를 통해서 연관 있는 데이터를 하나로 묶을 수 있는 자료형을 정의하면, 데이터의 표현 및 관리가 용이해지고, 그만큼 합리적인 <br/>코드를 작성할 수 있게 된다.
+
+### 공용체(Union Type)
+* union 키워드를 사용하여 선언하며, 한 가지를 제외한 모든 면에서 구조체와 같다. 바로 모든 멤버 변수가 하나의 메모리 공간을 공유한다는 점만이 다르다. 모든 멤버 변수가 같은 메모리를 공유하므로, 공용체는 한 번에 하나의 멤버 변수밖에 사용할 수 없다.
+```cpp
+typedef union ubox  //공용체 ubox 정의
+{
+  char mem1;
+  int mem2;
+  double mem3;
+}UBox;
 
 
 
