--- a/C/learn/구조체_2.md
+++ b/C/learn/구조체_2.md
@@ -95,7 +95,7 @@ int main()
 * 구조체를 통해서 연관 있는 데이터를 하나로 묶을 수 있는 자료형을 정의하면, 데이터의 표현 및 관리가 용이해지고, 그만큼 합리적인 <br/>코드를 작성할 수 있게 된다.
 
 ### 공용체(Union Type)
-* union 키워드를 사용하여 선언하며, 한 가지를 제외한 모든 면에서 구조체와 같다. 바로 모든 멤버 변수가 하나의 메모리 공간을 공유한다는 점만이 다르다. 모든 멤버 변수가 같은 메모리를 공유하므로, 공용체는 한 번에 하나의 멤버 변수밖에 사용할 수 없다.
+* union 키워드를 사용하여 선언하며, 한 가지를 제외한 모든 면에서 구조체와 같다. 바로 모든 멤버 변수가 하나의 메모리 공간을 공유한다는 점만이 다르다. **모든 멤버 변수가 같은 메모리를 공유**하므로, **공용체는 한 번에 하나의 멤버 변수밖에 사용할 수 없다.**
 ```cpp
 typedef struct sbox  //구조체 Sbox 정의
 {
@@ -111,7 +111,35 @@ typedef union ubox  //공용체 ubox 정의
   double mem3;
 }UBox;//주소값 호출시 mem1, mem2, mem3의 주소 값이 동일
 ```
+* 하나의 메모리 공간을 둘 이상의 방식으로 접근할 수 있다. 이 방식을 이용하여 **공용체 변수의 메모리 공간을 할당하고 공유한다.**
+```cpp
+typedef struct dbshort
+{
+  unsigned short upper;//상위 2바이트 크기의 양의 정수
+  unsigned short lower;//하위 2바이트 크기의 양의 정수
+}DBShort;//unsigned short형 변수를 멤버로 지니는 4바이트 크기의 구조체로 정의
 
+typedef union rdbuf
+{
+  int iBuf;		//입력 받을 정수(4바이트)
+  char bBuf[4];	//1바이트 크기의 char형 변수
+  DBShort sBuf;	//구조체 변수(입력 받은 정수를 2바이트씩 할당)
+}RDBuf; 
+
+int main()
+{
+  RDBuf buf;//공용체 변수 선언
+  printf("정수 입력 : ");
+  scanf("%d ", &(buf.iBuf));//구조체 변수에 정수 입력
+
+  printf("상위 2바이트 : %u \n", buf.sBuf.upper);//상위 2바이트 크기의 양의 정수 출력
+  printf("하위 2바이트 : %u \n", buf.sBuf.lower);//하위 2바이트 크기의 양의 정수 출력
+  printf("상위 1바이트 아스키 코드 : %c \n", buf.bBuf[0]);//상위 1바이트 크기의 아스키 코드 문자 출력
+  printf("하위 1바이트 아스키 코드 : %c \n", buf.bBuf[3]);//하위 1바이트 크기의 아스키 코드 문자 출력
+  
+  return 0;
+}
+```
 
 
 
