--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -6,9 +6,37 @@
 
 #### fopen함수
 * 스트림을 형성할 때 호출하는 함수로서 프로그램상에서 파일과 스트림을 형성할 수 있다.
+* FILE구조체의 포인터를 이용해서 **파일에 데이터를 저장하거나 파일에 저장된 데이터를 읽는다.**
 ```cpp
 #include <stdio.h>
 
+//함수의 첫번째 인자로는 스트림을 형성할 파일의 이름을, 두번째 인자로는 형성할 스트림의 종류에 대한 정보를 문자열의 형태로 전달
 //성공 시 해당 파일의 FILE 구조체 변수의 주소 값, 실패 시 NULL 포인터 반환
+//FILE 구조체의 변수는 파일을 가리키는 '지시자'의 역할을 한다.
 FILE* fopen(const char* filename, const char* mode);
 ```
+#### 입력 스트림과 출력 스트림
+* 입력 스트림의 형성에 사용하는 **rt모드의 스트림**은 **텍스트 데이터를 읽기 위한 입력 스트림**을 뜻한다.
+* 출력 스트림의 형성에 사용하는 **wt모드의 스트림**은 **텍스트 데이터를 쓰기 위한 입력 스트림**을 뜻한다.
+
+```cpp
+FILE* fp = fopen("data.txt", "wt");		//출력 스트림의 형성
+FILE* fp = fopen("data.txt", "rt");		//입력 스트림의 형성
+
+//출력 스트림 작성 시 파일의 경로를 포함해서 파일의 이름을 지정하면 원하는 경로에 생성된다.
+//단, 파일의 경로를 지정하려면 지정할 디렉터리에 미리 생성되어야 한다.
+FILE* fp = fopen("C:\\Project\\data.txt","wt");
+```
+
+#### fclose함수
+* fopen함수의 반대 기능으로서 fclose함수는 스트림을 해체할 때 호출하는 함수 또는 파일을 닫는 함수이다.
+
+```cpp
+#include <stdio.h>
+
+//성공 시 0, 실패 시 EOF를 반환
+int fclose(FILE* stream);
+```
+
+
+
