--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -4,7 +4,7 @@
 * 프로그램상에서 파일에 저장되어 있는 데이터를 참조하기 위해서는 프로그램과 파일 사이에 '스트림'을 형성해야 데이터를 주고 받을 수 있다. 여기서 **스트림(stream)은 데이터 이동의 경로가 되는 다리 역할을 한다.**
 파일과 스트림의 형성은 **운영체제에 의해서 그 구조가 결정되고 관리되는 대상**이다.
 
-#### fopen함수
+#### 스트림의 형성을 요청하는 함수(fopen)
 * 스트림을 형성할 때 호출하는 함수로서 프로그램상에서 파일과 스트림을 형성할 수 있다.
 * FILE구조체의 포인터를 이용해서 **파일에 데이터를 저장하거나 파일에 저장된 데이터를 읽는다.**
 ```cpp
@@ -28,7 +28,7 @@ FILE* fp = fopen("data.txt", "rt");		//입력 스트림의 형성
 FILE* fp = fopen("C:\\Project\\data.txt","wt");
 ```
 
-#### fclose함수
+#### 스트림의 소멸을 요청하는 함수(fclose)
 * fopen함수의 반대 기능으로서 fclose함수는 스트림을 해체할 때 호출하는 함수 또는 파일을 닫는 함수이다.
 
 ```cpp
@@ -37,6 +37,11 @@ FILE* fp = fopen("C:\\Project\\data.txt","wt");
 //성공 시 0, 실패 시 EOF를 반환
 int fclose(FILE* stream);
 ```
+#### fopen함수의 호출로 개방되었던 파일을 닫아줘야하는 이유
 
+* **운영체제가 할당한 자원의 반환**
+  *  운영체제에 할당된 파일에 대한 자원(주로 메모리)은 파일을 닫아주지 않으면 자원 손실을 초래하기 때문에 fclose함수를 호출해서 <br/>자원을 반환한다.
+* **버퍼링 되었던 데이터의 출력**
+  * 운영체제는 프로그램과 파일 사이에 입출력 버퍼를 둬서 성능의 향상을 도모하는데, **데이터**는 **출력버퍼에 저장되었다가 운영체제가 <br/>정해놓은 버퍼링 방식에 따라서 뒤늦게 파일에 저장**이 된다. 데이터 손실(프로그램의 오류)을 예방하기 위하여 **fclose함수의 호출**을<br/>통해 파일을 닫아주면 **출력 버퍼에 저장되어 있던 데이터가 파일로 이동하면서 출력버퍼는 비워지게 된다.**
 
 
